added basic buttons and header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="column-full">
+        <h1>Weekly Planner</h1>
+      </div>
+    </div>
+    <div class="rosw">
+      <div class="column-full">
+        <div class="row btn-container">
+          <button class="add-entry">Add entry</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
+
+<!--
+  make a container
+  make a row and a full column for header
+  make header
+  make another row and full column
+  make a button to add entry
+
+  make a modal
+  once button is clicked make moddl visible
+ -->
