Beginning work on modal for adding entry

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       </div>
     </div>
   </div>
+  <div class="modal-background">
+    <div class="modal-box">
+      <h2 class="modal-header">
+        Add Entry
+      </h2>
+      <select class="day"></select>
+      <select class="time"></select>
+      <textarea class="description" placeholder="Description"></textarea>
+      <button>Submit</button>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
