--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
         <h1>Weekly Planner</h1>
       </div>
     </div>
-    <div class="rosw">
-      <div class="column-full">
-        <div class="row btn-container">
-          <button class="add-entry">Add entry</button>
-        </div>
-      </div>
+    <div class="row btn-container">
+      <div class="week column-7">Sunday</div>
+      <div class="week column-7">Monday</div>
+      <div class="week column-7">Tuesday</div>
+      <div class="week column-7">Wednesday</div>
+      <div class="week column-7">Thursday</div>
+      <div class="week column-7">Friday</Frame></div>
+      <div class="week column-7">Saturday</div>
+    </div>
+    <div class="row btn-container">
+      <button class="add-entry">Add entry</button>
     </div>
   </div>
-  <div class="modal-background hidde">
+  <div class="modal-background hidden">
     <div class="modal-box">
       <h2 class="modal-header">
         Add Entry
