added table and styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
     <div class="row btn-container">
       <button class="add-entry">Add entry</button>
     </div>
+    <h2>Scheduled Events for <span>Monday</span></h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody class="schedule">
+        <tr>
+          <td>Hello</td>
+          <td>Hello</td>
+        </tr>
+        <tr>
+          <td>Hello</td>
+          <td>Hello</td>
+        </tr>
+        <tr>
+          <td>Hello</td>
+          <td>Hello</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
   <div class="modal-background hidden">
     <div class="modal-box">
@@ -79,6 +102,7 @@
         <div class="column-full">
           <textarea class="description" placeholder="Description" required></textarea>
         </div>
+        <button type="button" class="cancel">Cancel</button>
         <button class="submit">Submit</button>
       </form>
     </div>
