--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row btn-container">
       <button class="add-entry">Add entry</button>
     </div>
-    <h2>Scheduled Events for <span>Monday</span></h2>
+    <h2>Scheduled Events for <span class="day-title">Monday</span></h2>
     <table>
       <thead>
         <tr>
